# loop-workday-upload

./: README.md  loop_workday_upload.py  pyproject.toml  renovate.json
.concourse/: pipeline.yml
.concourse/tasks/: poetry-build.yml
.github/workflows/: build.yml
