[tool.poetry]
name = "loop-workday-upload"
version = "0"
description = "Upload data from Workday to Loop"
license = "MIT"
authors = ["Kristaps Berzinch <kristaps@berzin.ch>"]
repository = "https://github.com/RoboJackets/loop-workday-upload"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
selenium = "4.19.0"
webdriver-manager = "4.0.1"
selenium-wire = "5.1.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.2"
black = "24.4.0"
flake8 = "7.0.0"
flake8-black = "0.3.6"
flake8-bugbear = "24.4.21"
flake8-import-order = "0.18.2"
flake8-json = "24.4.0"
mypy = "1.9.0"
pylint = "3.1.0"

[tool.poetry.scripts]
workday-upload = 'loop_workday_upload:main'

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pylint.basic]
disable = ["line-too-long,logging-fstring-interpolation,unused-variable,wrong-import-order"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120

[tool.pylint.variables]
allow-global-unused-variables = false

[tool.mypy]
disallow_untyped_calls = false

[build-system]
requires = ["poetry_core==1.9.0"]
build-backend = "poetry.core.masonry.api"
